Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112985

Access to GL_MAX_VARYING_COMPONENTS fails in macOS with core profile context

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.6.0
    • 6.4.0
    • Qt RHI
    • None
    • Ventura 13.2.1
    • macOS
    • 2556243a7 (dev), ec825025c (6.5), 0a3257ca9 (6.4), fdb287e62 (dev)

    Description

      glGetIntegerv(GL_MAX_VARYING_COMPONENTS, &components)

      call is currently ending up with a GL_INVALID_ENUM error in Ventura 13.2.1, and the error is not cleared by Qt. The error is caught in the application code with the first call to glGetError().

      https://github.com/qt/qtbase/blob/4c34894075bc58023f6e52830739cf3c4d259614/src/gui/rhi/qrhigles2.cpp#L942

      We request 3.2 context and receive 4.1 :

      QSurfaceFormat format;
      format.setVersion(3, 2);
      format.setProfile(QSurfaceFormat::CoreProfile);
      QSurfaceFormat::setDefaultFormat(format);

       
      It might be a macOS issue.

      Note that GL_MAX_VARYING_COMPONENTS is used in other components as well (qt5compat) so the potential fix will probably be needed for those too.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            muratseker Murat Seker
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: